src/objects/Email_To_Case_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Block_Duplicate_Email_Messages__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to stop automated emails(email to case looping)</description>
        <inlineHelpText>Enable this check box to stop automated duplicate emails from customer.</inlineHelpText>
        <label>Block Duplicate Email Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Character_To_Truncate_Email_Subject__c</fullName>
        <description>Character to truncate the email subject to find duplicate email.</description>
        <inlineHelpText>Character to find the response email from customer.</inlineHelpText>
        <label>Character To Truncate Email Subject</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Checking_Subject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to disable the email subject checking in email to case looping.</description>
        <inlineHelpText>Enable this check box to remove email subject checking for duplicate emails.</inlineHelpText>
        <label>Disable Checking Subject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Checking_TextBody__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to disable the email subject checking in email to case looping.</description>
        <inlineHelpText>Enable this check box to remove email text body checking for duplicate emails.</inlineHelpText>
        <label>Disable Checking TextBody</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minutes_To_Block_Duplicate_Email_Message__c</fullName>
        <defaultValue>5</defaultValue>
        <description>System will block if it finds any duplicate Email Message from the same sender within the specified number of minutes.</description>
        <inlineHelpText>System will block if it finds any duplicate Email Message from the same sender within the specified number of minutes.</inlineHelpText>
        <label>Minutes To Block Duplicate Email Message</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Email To Case Settings</label>
</CustomObject>